--- a/assets/index.html
+++ b/assets/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo-List</title>
     <script type="text/javascript" src="js/lib/jquery.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/todo.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="container">   <!inside one div(container) we create all>
         <h1>TO-DO List</h1>
-        <input type="text">
+        <input type="text" placeholder="Add New Todo">
         <ul>
-            <li><span>X</span> Video Games</li>
-            <li><span>X</span> Cook Foods</li>
-            <li><span>X</span> Sleep</li>
-            <li><span>X</span> Go to office</li>
+            <li><span><i class="fa fa-trash"></i></span> Video Games</li>
+            <li><span><i class="fa fa-trash"></i></span> Cook Foods</li>
+            <li><span><i class="fa fa-trash"></i></span> Sleep</li>
+            <li><span><i class="fa fa-trash"></i></span> Go to office</li>
         </ul>
     </div>
     <script type="text/javascript" src="js/todo.js"></script>
